// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FAQ > should work with default props 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1rem;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div />
        <div>
          <p
            class="emotion-5 emotion-6"
          >
            Title
          </p>
          <div
            class="emotion-7 emotion-6"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with illustrationTest 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1rem;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-7 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div>
          <div
            class="emotion-5 emotion-6"
          >
            1
          </div>
        </div>
        <div>
          <p
            class="emotion-7 emotion-8"
          >
            Title
          </p>
          <div
            class="emotion-9 emotion-8"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with notes 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1rem;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 0.75rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div />
        <div>
          <p
            class="emotion-5 emotion-6"
          >
            Title
          </p>
          <div
            class="emotion-7 emotion-6"
          >
            Description
            <small
              class="emotion-9 emotion-6"
            >
              Notes
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with productIconName 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 1rem;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 1rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  width: 64px;
  min-width: 64px;
  height: 64px;
}

.emotion-5 path[fill].fill,
.emotion-5 g[fill].fill>*,
.emotion-5 g.fill>* {
  fill: #521094;
}

.emotion-5 path[fill].fillStrong,
.emotion-5 g[fill].fillStrong>*,
.emotion-5 g.fillStrong>* {
  fill: #a060f6;
}

.emotion-5 path[fill].fillWeak,
.emotion-5 g[fill].fillWeak>*,
.emotion-5 g.fillWeak>* {
  fill: #f1eefc;
}

.emotion-7 {
  font-size: 1rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 1.5rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.25rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div>
          <svg
            class="emotion-5 emotion-6"
            viewBox="0 0 64 64"
          >
            <g
              class="Support"
            >
              <g
                class=".Square"
              >
                <path
                  class="fillWeak"
                  d="M0 16C0 7.163 7.163 0 16 0h32c8.837 0 16 7.163 16 16v32c0 8.837-7.163 16-16 16H16C7.163 64 0 56.837 0 48z"
                  fill="#EEF"
                />
              </g>
              <g
                class="Support"
              >
                <g
                  class="Icon"
                >
                  <path
                    class="fill"
                    clip-rule="evenodd"
                    d="m26.912 13.55.317 1.997a18.211 18.211 0 0 0-11.706 11.757l-2.002-.3A20.212 20.212 0 0 1 26.913 13.55Zm.351 36.58a18.211 18.211 0 0 1-11.74-11.767l-2.002.3A20.212 20.212 0 0 0 26.954 52.13zm24.842-11.338-1.996-.322a18.212 18.212 0 0 1-11.706 11.66l.309 2a20.213 20.213 0 0 0 13.393-13.338m0-11.918A20.213 20.213 0 0 0 38.754 13.55l-.317 1.997a18.212 18.212 0 0 1 11.672 11.65l1.996-.322Z"
                    fill="#4F0599"
                    fill-rule="evenodd"
                  />
                  <path
                    class="fillStrong"
                    clip-rule="evenodd"
                    d="M38.929 12.496A36.852 36.852 0 0 0 32.834 12c-2.098 0-4.146.168-6.096.496a1 1 0 0 0-.822 1.141l1.762 11.185 1.976-.311-1.609-10.192.14-.019a35.45 35.45 0 0 1 4.649-.3l1.185.019c1.18.038 2.337.132 3.463.281l.135.02-1.604 10.19 1.975.312 1.763-11.185.012-.178a1 1 0 0 0-.834-.963m14.242 14.2a1 1 0 0 0-1.145-.822L40.84 27.678l.318 1.975 10.184-1.644.023.14c.2 1.513.3 3.083.3 4.684l-.018 1.195a35.414 35.414 0 0 1-.282 3.49l-.023.137-10.183-1.642-.319 1.975 11.185 1.804.18.013a1 1 0 0 0 .965-.835 37.34 37.34 0 0 0 .496-6.136c0-2.112-.168-4.175-.496-6.137ZM13.63 26.01l-.177-.011a1 1 0 0 0-.956.831A35.734 35.734 0 0 0 12 32.833c0 2.064.168 4.08.496 6.003a1 1 0 0 0 1.133.82l11.185-1.667-.295-1.978-10.2 1.518-.019-.127a34.298 34.298 0 0 1-.3-4.569l.019-1.165c.038-1.159.132-2.297.281-3.404l.02-.13 10.2 1.52.294-1.978-11.185-1.666Zm24.36 14.838 1.719 11.185a1 1 0 0 1-.822 1.137 36.331 36.331 0 0 1-6.053.496c-2.081 0-4.116-.167-6.053-.496a1 1 0 0 1-.833-.96l.012-.178 1.718-11.184 1.977.303-1.567 10.194.134.02c1.117.15 2.266.244 3.436.282l1.177.02c1.576 0 3.122-.102 4.612-.301l.131-.021-1.565-10.193z"
                    fill="#A365F6"
                    fill-rule="evenodd"
                  />
                  <path
                    class="fill"
                    clip-rule="evenodd"
                    d="M22.666 32.834c0-5.615 4.552-10.167 10.167-10.167S43 27.219 43 32.834 38.448 43 32.833 43s-10.166-4.55-10.166-10.166Zm18.334 0a8.167 8.167 0 1 0-16.333 0 8.167 8.167 0 0 0 16.333 0"
                    fill="#4F0599"
                    fill-rule="evenodd"
                  />
                </g>
              </g>
            </g>
          </svg>
        </div>
        <div>
          <p
            class="emotion-7 emotion-8"
          >
            Title
          </p>
          <div
            class="emotion-9 emotion-8"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
